[project]
name = "cytomine_utils"
description = "A package with utilities to interact with Cytomine's API."
authors = [
    {name = "Andre Rendeiro", email = "arendeiro@cemm.at"},
]
readme = "README.md"
keywords = [
    "computational pathology",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "setuptools_scm",
    "cytomine-python-client>=2.4.0"
]
dynamic = ['version']

[project.optional-dependencies]
dev = [
    "wheel",
    "ipython",
    "black[d]",
    "mypy>=0.900",  # pin to version supporting pyproject.toml
    "pandas-stubs",
    "pylint",
    "flake8",
    "git-lint",
    "pydocstyle",
    "rich",
    # data-science-types
    "PyQt5",
]

docs =[
    "sphinx",
    "sphinx-autodoc-typehints",
    "pydata-sphinx-theme"
]

[project.urls]
homepage = "https://github.com/rendeirolab/cytomine_utils"
repository = "https://github.com/rendeirolab/cytomine_utils"
documentation = "https://github.com/rendeirolab/cytomine_utils"
changelog = "https://github.com/rendeirolab/cytomine_utils/blob/master/docs/source/changelog.md"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]

[tool.setuptools_scm]
write_to = "cytomine_utils/_version.py"
write_to_template = 'version = __version__ = "{version}"'

[tool.ruff]
line-length = 90
